--- a/ThreadInMotion.Presentation/Views/Home/Index.cshtml
+++ b/ThreadInMotion.Presentation/Views/Home/Index.cshtml
@@ -1,8 +1,43 @@
-﻿@{
-    ViewData["Title"] = "Home Page";
-}
+﻿@model LoginViewModel
 
-<div class="text-center">
-    <h1 class="display-4">Welcome</h1>
-    <p>Learn about <a href="https://learn.microsoft.com/aspnet/core">building Web apps with ASP.NET Core</a>.</p>
-</div>
+<!DOCTYPE html>
+<html>
+<head>
+	<meta charset="UTF-8">
+	<title>ThreadInMotion</title>
+	<meta name="description" content="" />
+	<meta name="viewport" content="width=device-width, initial-scale=1.0">
+	<link rel="shortcut icon" sizes="196x196" href="../assets/images/logo.png">
+	<link rel="stylesheet" href="../libs/bower/font-awesome/css/font-awesome.min.css">
+	<link rel="stylesheet" href="../libs/bower/material-design-iconic-font/dist/css/material-design-iconic-font.min.css">
+	<link rel="stylesheet" href="../libs/bower/animate.css/animate.min.css">
+	<link rel="stylesheet" href="../assets/css/bootstrap.css">
+	<link rel="stylesheet" href="../assets/css/app.css">
+	<link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Raleway:400,500,600,700,800,900,300">
+</head>
+<body class="simple-page">
+	<div id="back-to-home">
+		<a href="index.html" class="btn btn-outline btn-default"><i class="fa fa-home animated zoomIn"></i></a>
+	</div>
+	<div class="simple-page-wrap">	
+		<div class="simple-page-form animated flipInY" id="login-form">
+			<h4 class="form-title m-b-xl text-center">Sign In With Your Infinity Account</h4>
+			<form asp-controller="Login" asp-action="Index" method="post">
+				<div class="form-group">
+					@Html.EditorFor(x => x.Username, new { htmlAttributes = new { @class = "form-control", @placeholder = "username" } })
+				</div>
+				<div class="form-group">
+					@Html.PasswordFor(x => x.Password, new { htmlAttributes = new { @class = "form-control", @placeholder = "password" } })
+				</div>
+				<div class="form-group m-b-xl">
+					<div class="checkbox checkbox-primary">
+						<input type="checkbox" id="keep_me_logged_in" />
+						<label for="keep_me_logged_in">Keep me signed in</label>
+					</div>
+				</div>
+				<input type="submit" class="btn btn-primary" value="SING IN">
+			</form>
+		</div>
+	</div>
+</body>
+</html>
