pages and layout has been created

--- a/ThreadInMotion.Presentation/Areas/User/Views/Shared/Layout.cshtml
+++ b/ThreadInMotion.Presentation/Areas/User/Views/Shared/Layout.cshtml
@@ -41,7 +41,7 @@
 									<small>Web Developer</small>
 									<span class="caret"></span>
 								</a>
-								<ul class="dropdown-menu animated flipInY">
+								@* <ul class="dropdown-menu animated flipInY">
 									<li>
 										<a class="text-color" href="/user">
 											<span class="m-r-xs"><i class="fa fa-home"></i></span>
@@ -76,7 +76,7 @@
 											</a>
 										}
 									</li>
-								</ul>
+								</ul> *@
 							</li>
 						</ul>
 					</div>
@@ -89,14 +89,38 @@
 				<ul class="aside-menu aside-left-menu">
 
 					<li class="menu-item">
-						<a href="/user" class="menu-link">
+						<a href="/user/menuone" class="menu-link">
 							<span class="menu-icon"><i class="fa fa-home"></i></span>
-							<span class="menu-text foldable">Masaüstü</span>
+							<span class="menu-text foldable">Menu01</span>
 							<span class="menu-caret foldable"><i class="zmdi zmdi-hc-sm zmdi-chevron-right"></i></span>
 						</a>
 					</li>
 
-					<li class="menu-item has-submenu">
+					<li class="menu-item">
+						<a href="/user/menutwo" class="menu-link">
+							<span class="menu-icon"><i class="fa fa-home"></i></span>
+							<span class="menu-text foldable">Menu02</span>
+							<span class="menu-caret foldable"><i class="zmdi zmdi-hc-sm zmdi-chevron-right"></i></span>
+						</a>
+					</li>
+
+					<li class="menu-item">
+						<a href="/user/menuthree" class="menu-link">
+							<span class="menu-icon"><i class="fa fa-home"></i></span>
+							<span class="menu-text foldable">Menu03</span>
+							<span class="menu-caret foldable"><i class="zmdi zmdi-hc-sm zmdi-chevron-right"></i></span>
+						</a>
+					</li>
+
+					<li class="menu-item">
+						<a href="/user/menufour" class="menu-link">
+							<span class="menu-icon"><i class="fa fa-home"></i></span>
+							<span class="menu-text foldable">Menu04</span>
+							<span class="menu-caret foldable"><i class="zmdi zmdi-hc-sm zmdi-chevron-right"></i></span>
+						</a>
+					</li>
+
+					@* <li class="menu-item has-submenu">
 						<a href="javascript:void(0)" class="menu-link submenu-toggle">
 							<span class="menu-icon"><i class="fa fa-cubes" aria-hidden="true"></i></span>
 							<span class="menu-text foldable">Yönetim</span>
@@ -111,9 +135,9 @@
 							<li><a href="/user/managementsettings">Ayarlar</a></li>
 							<li><a href="/user/managementview">Görüntülenmeler</a></li>
 						</ul>
-					</li>				
+					</li> *@
 
-					<li class="menu-item has-submenu">
+					@* <li class="menu-item has-submenu">
 						<a href="javascript:void(0)" class="menu-link submenu-toggle">
 							<span class="menu-icon"><i class="fa fa-users" aria-hidden="true"></i></span>
 							<span class="menu-text foldable">Üyelik</span>
@@ -125,9 +149,9 @@
 							<li><a href="/user/contact">Telefon</a></li>
 							<li><a href="/user/email">Email</a></li>
 						</ul>
-					</li>
+					</li> *@
 
-					<li class="menu-item has-submenu">
+					@* <li class="menu-item has-submenu">
 						<a href="javascript:void(0)" class="menu-link submenu-toggle">
 							<span class="menu-icon"><i class="fa fa-sitemap" aria-hidden="true"></i></span>
 							<span class="menu-text foldable">Organizasyon</span>
@@ -139,7 +163,7 @@
 							<li><a href="/user/organizationexpense">Harcamalar</a></li>
 							<li><a href="/user/organizationpayment">Ödemeler</a></li>
 						</ul>
-					</li>
+					</li> *@
 
 					@* <li class="menu-item">
 						<a href="/user/organization" class="menu-link">
@@ -331,7 +355,7 @@
 					</li> *@
 				</ul>
 
-				<hr>
+				@* <hr>
 				<footer id="aside-footer">
 					<ul class="aside-menu aside-left-menu">
 						<li class="menu-item">
@@ -347,7 +371,7 @@
 							</a>
 						</li>
 					</ul>
-				</footer>
+				</footer> *@
 			</div>
 		</div><
 	</aside>
